--- a/about.html
+++ b/about.html
@@ -30,19 +30,19 @@
         <a class="nav-link" href="culmination.html">CULMINATION EVENT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">SPEAK UP</a>
+        <a class="nav-link" href="speakup.html">SPEAK UP</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://www.change.org/">SIGN PETITIONS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT US</a>
+        <a class="nav-link" href="contactus.html">CONTACT US</a>
       </li>
     </ul>
   </nav>
 
   <div class="container">
-    <h1 style="text-align:center;color:rgb(253,95,0);font-weight:800;">ABOUT</h1><br>
+    <h1 style="text-align:center;color:rgb(254,105,37);font-weight:800;">ABOUT</h1><br>
     <h2>5th UN Global Road Safety week "Leadership for Road Safety"</h2>
     <br>
     <p>The 5th UN Global Road Safety Week, “Leadership for Road safety” took place on 6-12 May 2019. Its goal was to generate demand from the public for stronger leadership for road safety worldwide. Stronger leadership is needed to advance road
@@ -66,6 +66,12 @@
     </p>
     <br>
   </div>
-
+  <footer style="background-color:rgb(28,75,130);padding:20px 16px 8px;font-family:'Poppins', sans-serif;color:white;height:56px;">
+      <div class="container-fluid">
+        <h6 style="float:left;">Maintained By Indian Road Safety Campaign</h6>
+        <a href="contactus.html" style="text-decoration:none; cursor:pointer;color:white;"><h6 style="float:right;margin-left:15px;">Contact Us</h6></a>
+        <a href="https://ww2.road-safety.co.in/" style="text-decoration:none; cursor:pointer;color:white;"><h6 style="float:right">About IRSC</h6></a>
+      </div>
+    </footer>
   </body>
   </html>
