--- a/culmination.html
+++ b/culmination.html
@@ -30,64 +30,199 @@
         <a class="nav-link" href="culmination.html">CULMINATION EVENT</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">SPEAK UP</a>
+        <a class="nav-link" href="speakup.html">SPEAK UP</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://www.change.org/">SIGN PETITIONS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT US</a>
+        <a class="nav-link" href="contactus.html">CONTACT US</a>
       </li>
     </ul>
   </nav>
 
   <div class="container">
-    <h1 style="color: rgb(253,95,0);text-align:center;font-weight:800;">CULMINATION EVENT</h1>
-    <p>As part of the culmination of the Fifth UN Global Road Safety Week, Indian Road Safety Campaign organized a "Leadership for Change" Workshop to promote the spirit of leadership among people from all age groups, students, leaders on behalf of the WHO Country Office for India on 18th May 2019 at IIT Delhi. The Workshop was taken by the stalwarts in the field of the road-safety, global experts from the WHO and UN and instructors from IIT, AIIMS and Supreme Court.
-    <br><br>Those present were Dr. Rajan Ratna from UN ESCAP,Dr. Gaurav Gupta from WHO,Shri Ramandeep Chowdhary, Deputy Secretary, MoRTH,Dr. Sushma Sagar, AIIMS trauma representative,Prof. KR Rao, Professor Civil Engineering(Traffic Safety),Dr. Geetam Tewari, Road Safety Expert.
-    <br><br>A group discussion was conducted among the students which sought to stimulate discussion on important issues related to road safety.The discussion saw enthusiastic participation from all the students .The groups contemplated on the topics ,engaged into a deliberative discussion and came to a consensus by presenting a conclusion to the dignitaries.The activity turned out to be successful in accomplishing its motive of knowing a student perspective on road safety issues.
+    <h1 style="color: rgb(254,105,37);text-align:center;font-weight:800;">CULMINATION EVENT</h1><br>
+    <p>As part of the culmination of the Fifth UN Global Road Safety Week, Indian Road Safety Campaign organized a "Leadership for Change" Workshop to promote the spirit of leadership among people from all age groups, students, leaders on behalf of
+      the WHO Country Office for India on 18th May 2019 at IIT Delhi. The Workshop was taken by the stalwarts in the field of the road-safety, global experts from the WHO and UN and instructors from IIT, AIIMS and Supreme Court.
+      <br><br>Those present were Dr. Rajan Ratna from UN ESCAP,Dr. Gaurav Gupta from WHO,Shri Ramandeep Chowdhary, Deputy Secretary, MoRTH,Dr. Sushma Sagar, AIIMS trauma representative,Prof. KR Rao, Professor Civil Engineering(Traffic Safety),Dr.
+      Geetam Tewari, Road Safety Expert.
+      <br><br>A group discussion was conducted among the students which sought to stimulate discussion on important issues related to road safety.The discussion saw enthusiastic participation from all the students .The groups contemplated on the
+      topics ,engaged into a deliberative discussion and came to a consensus by presenting a conclusion to the dignitaries.The activity turned out to be successful in accomplishing its motive of knowing a student perspective on road safety issues.
     </p>
     <br>
-    <h3 style="color: rgb(253,95,0);">Snapshots</h3>
+    <h3 style="color: rgb(254,105,37);margin-bottom:0px;">Snapshots</h3>
     <div class="row">
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/IMG-20190619-WA0005.jpg"><img src="assets/Culmination-Event/IMG-20190619-WA0005.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/IMG-20190619-WA0005.jpg"><img src="assets/Culmination-Event/IMG-20190619-WA0005.jpg" class="popupimage" ></a> -->
+        <a href="assets/Culmination-Event/IMG-20190619-WA0005.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/IMG-20190619-WA0005.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Mr. Rajan Ratna <br /> UN ESCAP</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0158.jpg"><img src="assets/Culmination-Event/DSC_0158.jpg" class="popupimage" > </a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0158.jpg"><img src="assets/Culmination-Event/DSC_0158.jpg" class="popupimage"> </a> -->
+        <a href="assets/Culmination-Event/DSC_0158.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0158.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Shri. Ramandeep Chaudhary <br /> DS, MoRTH</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0161.jpg"><img src="assets/Culmination-Event/DSC_0161.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0161.jpg"><img src="assets/Culmination-Event/DSC_0161.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0161.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0161.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Mr. Gaurav Gupta <br />WHO</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0236.jpg"><img src="assets/Culmination-Event/DSC_0236.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0236.jpg"><img src="assets/Culmination-Event/DSC_0236.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0236.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0236.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Shri. Ramandeep Chaudhary addressing the audience</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0365.jpg"><img src="assets/Culmination-Event/DSC_0365.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0365.jpg"><img src="assets/Culmination-Event/DSC_0365.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0365.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0365.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Mr. Gaurav Gupta addressing the audience</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0368.jpg"><img src="assets/Culmination-Event/DSC_0368.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0368.jpg"><img src="assets/Culmination-Event/DSC_0368.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0368.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0368.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Mr. Gaurav Gupta addressing the audience</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0537.jpg"><img src="assets/Culmination-Event/DSC_0537.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0537.jpg"><img src="assets/Culmination-Event/DSC_0537.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0537.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0537.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Prof. Sushma Sagar <br />AIIMS</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0558.jpg"><img src="assets/Culmination-Event/DSC_0558.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0558.jpg"><img src="assets/Culmination-Event/DSC_0558.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0558.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0558.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Prof. Geetam Tiwari <br />TRIPP,IIT Delhi</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0001.jpg"><img src="assets/Culmination-Event/DSC_0001.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0001.jpg"><img src="assets/Culmination-Event/DSC_0001.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0001.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0001.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Students from Gyan Mandir</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0103.jpg"><img src="assets/Culmination-Event/DSC_0103.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0103.jpg"><img src="assets/Culmination-Event/DSC_0103.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0103.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0103.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Students from Tagore International</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/DSC_0118.jpg"><img src="assets/Culmination-Event/DSC_0118.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/DSC_0118.jpg"><img src="assets/Culmination-Event/DSC_0118.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/DSC_0118.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/DSC_0118.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Students from Gyan Mandir</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
-      <div class="col-lg-4 col-md-6" >
-        <a href="assets/Culmination-Event/IMG-20190619-WA0002.jpg"><img src="assets/Culmination-Event/IMG-20190619-WA0002.jpg" class="popupimage" ></a>
+      <div class="col-lg-4 col-md-6">
+        <!-- <a href="assets/Culmination-Event/IMG-20190619-WA0002.jpg"><img src="assets/Culmination-Event/IMG-20190619-WA0002.jpg" class="popupimage"></a> -->
+        <a href="assets/Culmination-Event/IMG-20190619-WA0002.jpg">
+        <div class="card img-fluid" style="width:250px;height:250px">
+          <img class="card-img-top" src="assets/Culmination-Event/IMG-20190619-WA0002.jpg" alt="Card image" style="width:250px;height:250px">
+          <div class="card-img-overlay d-flex flex-column justify-content-end" style="padding-bottom: 10px;padding-left: 10px;padding-right: 10px;">
+
+            <h6 class="card-title" style="background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.5); color: #f1f1f1;margin-bottom:0px;padding: 5px;">Mr. Rajan Ratna<br />UN ESCAP</h6>
+
+          </div>
+        </div>
+        </a>
       </div>
     </div>
   </div>
   <br>
-  </body>
-  </html>
+  <footer style="background-color:rgb(28,75,130);padding:20px 16px 8px;font-family:'Poppins', sans-serif;color:white;height:56px;">
+    <div class="container-fluid">
+      <h6 style="float:left;">Maintained By Indian Road Safety Campaign</h6>
+      <a href="contactus.html" style="text-decoration:none; cursor:pointer;color:white;">
+        <h6 style="float:right;margin-left:15px;">Contact Us</h6>
+      </a>
+      <a href="https://ww2.road-safety.co.in/" style="text-decoration:none; cursor:pointer;color:white;">
+        <h6 style="float:right">About IRSC</h6>
+      </a>
+    </div>
+  </footer>
+</body>
+
+</html>
